<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2012 - VAUSHELL - contact@vaushell.com.
  All rights reserved. This program and the accompanying materials
  are made available under the terms of the GNU Public License v3.0
  which accompanies this distribution, and is available at
  http://www.gnu.org/licenses/gpl.html
-->
<resources>

    <string name="hello">Hello World, TreeTaskerADactivity!</string>
    <string name="app_name">TreeTasker</string>
    <string name="error">Erreur</string>
    <string name="not_authenticated">Le couple identifiant/mot de passe est incorrect.</string>
    <string name="ok">OK</string>
    <string name="app_display_name">TreeTasker</string>
    <string name="login">Identifiant</string>
    <string name="password">Mot de passe</string>
    <string name="connect">Se connecter</string>
    <string name="register">S\'enregistrer</string>
    <string name="server_not_reachable">La connexion au serveur n\'a pas abouti.</string>
    <string name="valid_mail">E-mail valide</string>
    <string name="achieved">Réussi !</string>
    <string name="register_achieved">L\'enregistrement a réussi. Un mail vient de vous être envoyé. Vous devez valider votre compte avant de pouvoir l\'utiliser.</string>
    <string name="registration_not_validated">Vous devez valider votre inscription avant de pouvoir vous connecter.</string>
    <string name="add_sub_task">Ajouter une sous-tâche</string>
    <string name="edit_task">Editer la tâche</string>
    <string name="edit">Editer</string>
    <string name="copy">Copier</string>
    <string name="paste">Coller</string>
    <string name="delete">Supprimer</string>
    <string name="confirm_delete_task">Êtes-vous sûr de vouloir supprimer cette tâche et son contenu ?</string>
    <string name="cancel">Annuler</string>
    <string name="title">Titre</string>
    <string name="save">Sauvegarder</string>
    <string name="add_root_task">Ajouter une tâche</string>
    <string name="description">Description</string>
    <color name="canary_yellow">#FCF0AD</color>
    <string name="menu_synchronize">Synchroniser</string>
    <string name="wait_session_check">Vérification de session…</string>
    <string name="wait_connection">Connexion…</string>
    <string name="wait_synchronization">Synchronisation…</string>
    <string name="endpoint">tt_endpoint</string>
    <string name="endpoint_caption">Adresse du serveur</string>
    <string name="endpoint_summary">Entrez le endpoint du webservice</string>
    <string name="synctime">sync_time</string>
    <string name="synctime_caption">Intervalle de synchronisation</string>
    <string name="synctime_summary">Délai de synchronisation automatique de la liste des tâches en minutes</string>
    <string name="preferences">Préférences</string>
    <string name="toast_connected">Connecté !</string>
    <string name="paste_rename">Coller et renommer</string>
    <color name="doneTextColor">#009A00</color>
    <color name="todoTextColor">#000000</color>
    <string name="toast_edited">Édition : ok !</string>
    <string name="toast_pasted">Collage : ok !</string>
    <string name="toast_synchronized">Synchronisation : ok !</string>
    <string name="toast_copied">Copie : ok !</string>
    <string name="toast_deleted">Suppression : ok !</string>
    <string name="toast_saved">Sauvegarde : ok !</string>
    <string name="toast_added">Ajout : ok !</string>
    <string name="toast_moved">Déplacement : ok !</string>
    <string name="erase">Effacer</string>
    <string name="image_desc_connect">Connection button.</string>
    <string name="image_desc_erase">Erase all fields.</string>
    <string name="image_desc_register">Register account.</string>
    <string name="confirm_password">Confirmation</string>
    <string name="password_not_confirmed_properly">Le mot de passe a été mal saisi.</string>
    <string name="task_validated">Terminé</string>
    <string name="add">Ajouter</string>
    <string name="toast_synchronizing">Synchronisation en cours…</string>

</resources>
