<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2012 - VAUSHELL - contact@vaushell.com.
  All rights reserved. This program and the accompanying materials
  are made available under the terms of the GNU Public License v3.0
  which accompanies this distribution, and is available at
  http://www.gnu.org/licenses/gpl.html
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/aLBLtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/app_display_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/aLBLconnectTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/connect"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/aTXTloginValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/login"
                android:inputType="textEmailAddress" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/aTXTpasswordValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/aBTerase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:contentDescription="@string/image_desc_erase"
            android:src="@drawable/erase" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:baselineAligned="false" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:gravity="center" >

            <ImageButton
                android:id="@+id/aBTconnect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/image_desc_connect"
                android:src="@drawable/connect" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:gravity="center" >

            <ImageButton
                android:id="@+id/aBTregister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/image_desc_register"
                android:src="@drawable/register" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>